// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot should render with updated shape 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 5px;
  min-width: 5.625em;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  vertical-align: middle;
  touch-action: manipulation;
  width: auto;
  white-space: nowrap;
  font-size: .875rem;
  font-weight: 600;
  height: 37px;
  padding: 0 15px;
  background: #006298;
  border: 0;
  border-color: #006298;
}

.c0:not(:disabled):after,
.c0:not(:disabled):before {
  background: #FFFFFF;
  content: '';
  opacity: 0;
  position: absolute;
}

.c0:not(:disabled):after {
  border-radius: 50%;
  height: 32px;
  left: 50%;
  padding: 50%;
  top: 18px;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 32px;
}

.c0:not(:disabled):before {
  height: 200%;
  left: 0;
  top: -50%;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: 200%;
}

.c0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.c0:not(:disabled):hover:before,
.c0:not(:disabled):focus:before {
  opacity: 0.1;
}

.c0:focus {
  outline: 2px dotted #F2A900;
  outline-offset: 3px;
}

.c0,
.c0:hover,
.c0:focus {
  color: #FFFFFF;
}

<div>
  <button
    class="c0"
    color="primary"
    shape="round"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated size 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 5px;
  min-width: 5.625em;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  vertical-align: middle;
  touch-action: manipulation;
  width: auto;
  white-space: nowrap;
  font-size: .750rem;
  font-weight: 600;
  height: 29px;
  padding: 0 10px;
  background: #006298;
  border: 0;
  border-color: #006298;
}

.c0:not(:disabled):after,
.c0:not(:disabled):before {
  background: #FFFFFF;
  content: '';
  opacity: 0;
  position: absolute;
}

.c0:not(:disabled):after {
  border-radius: 50%;
  height: 32px;
  left: 50%;
  padding: 50%;
  top: 18px;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 32px;
}

.c0:not(:disabled):before {
  height: 200%;
  left: 0;
  top: -50%;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: 200%;
}

.c0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.c0:not(:disabled):hover:before,
.c0:not(:disabled):focus:before {
  opacity: 0.1;
}

.c0:focus {
  outline: 2px dotted #F2A900;
  outline-offset: 3px;
}

.c0,
.c0:hover,
.c0:focus {
  color: #FFFFFF;
}

<div>
  <button
    class="c0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated size 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 5px;
  min-width: 5.625em;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  vertical-align: middle;
  touch-action: manipulation;
  width: auto;
  white-space: nowrap;
  font-size: .750rem;
  font-weight: 600;
  height: 29px;
  padding: 0 10px;
  background: #006298;
  border: 0;
  border-color: #006298;
}

.c0:not(:disabled):after,
.c0:not(:disabled):before {
  background: #FFFFFF;
  content: '';
  opacity: 0;
  position: absolute;
}

.c0:not(:disabled):after {
  border-radius: 50%;
  height: 32px;
  left: 50%;
  padding: 50%;
  top: 18px;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 32px;
}

.c0:not(:disabled):before {
  height: 200%;
  left: 0;
  top: -50%;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: 200%;
}

.c0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.c0:not(:disabled):hover:before,
.c0:not(:disabled):focus:before {
  opacity: 0.1;
}

.c0:focus {
  outline: 2px dotted #F2A900;
  outline-offset: 3px;
}

.c0,
.c0:hover,
.c0:focus {
  color: #FFFFFF;
}

<div>
  <button
    class="c0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated textTransform 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 5px;
  min-width: 5.625em;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  vertical-align: middle;
  touch-action: manipulation;
  width: auto;
  white-space: nowrap;
  font-size: .875rem;
  font-weight: 600;
  height: 37px;
  padding: 0 15px;
  background: #006298;
  border: 0;
  border-color: #006298;
}

.c0:not(:disabled):after,
.c0:not(:disabled):before {
  background: #FFFFFF;
  content: '';
  opacity: 0;
  position: absolute;
}

.c0:not(:disabled):after {
  border-radius: 50%;
  height: 32px;
  left: 50%;
  padding: 50%;
  top: 18px;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 32px;
}

.c0:not(:disabled):before {
  height: 200%;
  left: 0;
  top: -50%;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: 200%;
}

.c0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.c0:not(:disabled):hover:before,
.c0:not(:disabled):focus:before {
  opacity: 0.1;
}

.c0:focus {
  outline: 2px dotted #F2A900;
  outline-offset: 3px;
}

.c0,
.c0:hover,
.c0:focus {
  color: #FFFFFF;
}

<div>
  <button
    class="c0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated variant 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 5px;
  min-width: 5.625em;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  vertical-align: middle;
  touch-action: manipulation;
  width: auto;
  white-space: nowrap;
  font-size: .875rem;
  font-weight: 600;
  height: 37px;
  padding: 0 15px;
  background: none;
  border: 2px solid;
}

.c0:not(:disabled):after,
.c0:not(:disabled):before {
  background: #006298;
  content: '';
  opacity: 0;
  position: absolute;
}

.c0:not(:disabled):after {
  border-radius: 50%;
  height: 32px;
  left: 50%;
  padding: 50%;
  top: 18px;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 32px;
}

.c0:not(:disabled):before {
  height: 200%;
  left: 0;
  top: -50%;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: 200%;
}

.c0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.c0:not(:disabled):hover:before,
.c0:not(:disabled):focus:before {
  opacity: 0.1;
}

.c0:focus {
  outline: 2px dotted #F2A900;
  outline-offset: 3px;
}

.c0,
.c0:hover,
.c0:focus {
  color: #006298;
}

<div>
  <button
    class="c0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;
